ag-grid refresh fixes

--- a/flo/src/app/table/desktop/desktop.component.html
+++ b/flo/src/app/table/desktop/desktop.component.html
@@ -2,6 +2,7 @@
   class="ag-theme-material _custom"
   [context]="{componentParent: this}"
   [rowData]="rowData"
+  [deltaRowDataMode]="deltaRowDataMode" 
   [columnDefs]="columnDefs"
   [modules]="modules"
   [rowHeight]="rowHeight"
@@ -9,6 +10,7 @@
   [suppressRowClickSelection]="true"
   [rowSelection]="'multiple'"
   [domLayout]="'autoHeight'"
+  [getRowNodeId]="getRowNodeId"
   (gridReady)="onGridReady($event)"
   (gridSizeChanged)="updateTableSize()"
   (rowSelected)="patientChecked.emit($event);"
