--- a/flo/src/app/table/shared/components/detail-tablet/detail-tablet.component.css
+++ b/flo/src/app/table/shared/components/detail-tablet/detail-tablet.component.css
@@ -35,7 +35,7 @@
   box-sizing: unset;
   overflow: hidden;
   border-radius: 10px;
- }
+}
 .detail-tablet__cell._total {
   font-size: 16px;
   font-weight: 500;
@@ -63,4 +63,8 @@
   display: block;
   line-height: 1.7;
   margin: auto;
+}
+
+.white-space {
+  padding-right: 0.5em;
 }
