--- a/flo/src/app/table/view/responsive-table/responsive-table.component.html
+++ b/flo/src/app/table/view/responsive-table/responsive-table.component.html
@@ -1,6 +1,7 @@
 <div (window:resize)="updateWindowWidth()">
   <desktop *ngIf="!showMobile"
             [rowData]="rowData"
+            [matTable]="matTable"
             (openChat)="openChat.emit($event)"
             (edit)="edit.emit($event)"
             (uploadInfo)="uploadInfo.emit($event)"
